# pkg/server/types.gen.go
@@ -1,0 +1,163 @@
+// Package server provides primitives to interact the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+package server
+
+import (
+	"time"
+)
+
+// CreateServerRequest defines model for CreateServerRequest.
+type CreateServerRequest struct {
+	Description *string `json:"description,omitempty"`
+	Flavor      *Flavor `json:"flavor,omitempty"`
+	Name        *string `json:"name,omitempty"`
+	TemplateId  *int    `json:"template_id,omitempty"`
+
+	// custom variables of this server
+	TemplateVariables *TemplateVariables `json:"template_variables,omitempty"`
+}
+
+// Flavor defines model for Flavor.
+type Flavor struct {
+
+	// cpu size in micro cores (mcore), 1000mcore = 1core
+	Cpu *int `json:"cpu,omitempty"`
+
+	// memory size in MiB, 1024MiB = 1GiB
+	Memmory *int `json:"memmory,omitempty"`
+
+	// gpu unit
+	NvidiaGpu *int `json:"nvidia_gpu,omitempty"`
+}
+
+// LoginRequest defines model for LoginRequest.
+type LoginRequest struct {
+	Id string `json:"id"`
+	Pw string `json:"pw"`
+}
+
+// Quota defines model for Quota.
+type Quota struct {
+
+	// cpu size in micro cores (mcore), 1000mcore = 1core
+	Cpu *int `json:"cpu,omitempty"`
+
+	// instance count
+	Instance *int `json:"instance,omitempty"`
+
+	// memory size in MiB, 1024MiB = 1GiB
+	Memmory *int `json:"memmory,omitempty"`
+
+	// gpu unit
+	NvidiaGpu *int `json:"nvidia_gpu,omitempty"`
+
+	// storage size in GiB, 1024GiB = 1TiB
+	Storage *int `json:"storage,omitempty"`
+}
+
+// Reason defines model for Reason.
+type Reason struct {
+	Reason *string `json:"reason,omitempty"`
+}
+
+// ServerObject defines model for ServerObject.
+type ServerObject struct {
+
+	// Creation date and time
+	CreatedAt *time.Time `json:"created_at,omitempty"`
+
+	// description of this server
+	Description *string `json:"description,omitempty"`
+	Flavor      *Flavor `json:"flavor,omitempty"`
+
+	// id of this server
+	Id *string `json:"id,omitempty"`
+
+	// timestamp of last health check time
+	LastProbeTime *time.Time `json:"last_probe_time,omitempty"`
+
+	// timestamp of last transition of this server
+	LastTransitionTime *time.Time `json:"last_transition_time,omitempty"`
+
+	// show last event of this server. error message will be shown here.
+	Message *string `json:"message,omitempty"`
+
+	// name of this server
+	Name  *string   `json:"name,omitempty"`
+	Owner *[]string `json:"owner,omitempty"`
+
+	// show current status of this server
+	Status *string `json:"status,omitempty"`
+
+	// template id of this server
+	TemplateId *int `json:"template_id,omitempty"`
+
+	// custom variables of this server
+	TemplateVariables *TemplateVariables `json:"template_variables,omitempty"`
+}
+
+// Template defines model for Template.
+type Template struct {
+
+	// kubernetes corev1/pod yaml based template
+	Bdoy *string `json:"bdoy,omitempty"`
+
+	// custom variables of this server
+	DefaultVariables *TemplateVariables `json:"default_variables,omitempty"`
+	Description      *string            `json:"description,omitempty"`
+	Id               *int               `json:"id,omitempty"`
+	Name             *string            `json:"name,omitempty"`
+}
+
+// TemplateVariables defines model for TemplateVariables.
+type TemplateVariables []struct {
+	Name  *string `json:"name,omitempty"`
+	Value *string `json:"value,omitempty"`
+}
+
+// UserInfo defines model for UserInfo.
+type UserInfo struct {
+	GroupQuota *Quota  `json:"group_quota,omitempty"`
+	Id         *string `json:"id,omitempty"`
+	UserQuota  *Quota  `json:"user_quota,omitempty"`
+}
+
+// AdminSetGroupQuotaJSONBody defines parameters for AdminSetGroupQuota.
+type AdminSetGroupQuotaJSONBody Quota
+
+// AdminSetUserQuotaJSONBody defines parameters for AdminSetUserQuota.
+type AdminSetUserQuotaJSONBody Quota
+
+// AdminCreateTemplateJSONBody defines parameters for AdminCreateTemplate.
+type AdminCreateTemplateJSONBody Template
+
+// LoginUserJSONBody defines parameters for LoginUser.
+type LoginUserJSONBody LoginRequest
+
+// CreateServerJSONBody defines parameters for CreateServer.
+type CreateServerJSONBody CreateServerRequest
+
+// UpdateUserInfoJSONBody defines parameters for UpdateUserInfo.
+type UpdateUserInfoJSONBody struct {
+	NewPassword *string `json:"new_password,omitempty"`
+	Password    *string `json:"password,omitempty"`
+}
+
+// AdminSetGroupQuotaRequestBody defines body for AdminSetGroupQuota for application/json ContentType.
+type AdminSetGroupQuotaJSONRequestBody AdminSetGroupQuotaJSONBody
+
+// AdminSetUserQuotaRequestBody defines body for AdminSetUserQuota for application/json ContentType.
+type AdminSetUserQuotaJSONRequestBody AdminSetUserQuotaJSONBody
+
+// AdminCreateTemplateRequestBody defines body for AdminCreateTemplate for application/json ContentType.
+type AdminCreateTemplateJSONRequestBody AdminCreateTemplateJSONBody
+
+// LoginUserRequestBody defines body for LoginUser for application/json ContentType.
+type LoginUserJSONRequestBody LoginUserJSONBody
+
+// CreateServerRequestBody defines body for CreateServer for application/json ContentType.
+type CreateServerJSONRequestBody CreateServerJSONBody
+
+// UpdateUserInfoRequestBody defines body for UpdateUserInfo for application/json ContentType.
+type UpdateUserInfoJSONRequestBody UpdateUserInfoJSONBody
